--- a/contact/index.html
+++ b/contact/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Contact TeleBot Host – 24/7 Telegram Bot Hosting Support</title>
+  <title>Contact TeleBotHost – 24/7 Telegram Bot Hosting Support</title>
 
-  <meta name="description" content="Contact TeleBot Host for 24/7 Telegram bot hosting support. Get assistance via email or Telegram for bot setup, troubleshooting, errors, hosting help, and platform guidance.">
+  <meta name="description" content="Contact TeleBotHost for 24/7 Telegram bot hosting support. Get assistance via email or Telegram for bot setup, troubleshooting, errors, hosting help, and platform guidance.">
 
   <!-- SEO Keywords -->
   <meta name="keywords" content="
     telebothost,
-    telebot host,
+    TeleBotHost,
     telebothost support,
     telebothost contact,
     telebothost telegram channel link,
@@ -27,16 +27,16 @@
   ">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Contact TeleBot Host – 24/7 Support">
-  <meta property="og:description" content="Need help with Telegram bot hosting? Contact TeleBot Host via email or Telegram anytime!">
+  <meta property="og:title" content="Contact TeleBotHost – 24/7 Support">
+  <meta property="og:description" content="Need help with Telegram bot hosting? Contact TeleBotHost via email or Telegram anytime!">
   <meta property="og:image" content="https://telebothost.com/assets/img/logo.png">
   <meta property="og:url" content="https://telebothost.com/contact">
   <meta property="og:type" content="website">
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Contact TeleBot Host – 24/7 Support">
-  <meta name="twitter:description" content="Reach TeleBot Host support anytime for Telegram bot hosting help.">
+  <meta name="twitter:title" content="Contact TeleBotHost – 24/7 Support">
+  <meta name="twitter:description" content="Reach TeleBotHost support anytime for Telegram bot hosting help.">
   <meta name="twitter:image" content="https://telebothost.com/assets/img/logo.png">
 
   <!-- Canonical -->
@@ -65,7 +65,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "TeleBot Host",
+    "name": "TeleBotHost",
     "url": "https://telebothost.com",
     "logo": "https://telebothost.com/assets/img/logo.png",
     "contactPoint": [{
@@ -87,8 +87,8 @@
  <header id="header">
    <div class="container nav-container">
      <a href="/" class="logo">
-       <img src="/assets/img/logo.png" alt="TeleBot Host Logo">
-       TeleBot Host
+       <img src="/assets/img/logo.png" alt="TeleBotHost Logo">
+       TeleBotHost
      </a>
      <nav class="nav-links">
        <a href="/" class="nav-link">Home</a>
@@ -98,7 +98,7 @@
 
  <section>
    <h2>Contact Us</h2>
-   <p class="subtitle">Reach out to the TeleBot Host support team anytime. We are available 24/7 to help you!</p>
+   <p class="subtitle">Reach out to the TeleBotHost support team anytime. We are available 24/7 to help you!</p>
 
    <div class="contact-section">
      <h3>Email Support</h3>
@@ -132,13 +132,13 @@
 
    <div class="contact-section">
      <h3>Additional Info</h3>
-     <p>TeleBot Host is committed to providing secure, fast, and reliable Telegram bot hosting. Contact us anytime — we respond instantly.</p>
+     <p>TeleBotHost is committed to providing secure, fast, and reliable Telegram bot hosting. Contact us anytime — we respond instantly.</p>
    </div>
 
    <div style="margin-top:50px; color:#555; line-height:1.6;">
-     <h3>Why Choose TeleBot Host?</h3>
+     <h3>Why Choose TeleBotHost?</h3>
      <p>
-       TeleBot Host ensures top-tier hosting performance with auto-scaling, isolation, fast deployment,
+       TeleBotHost ensures top-tier hosting performance with auto-scaling, isolation, fast deployment,
        uptime monitoring, and developer-friendly tools. Perfect for small projects to large production bots.
      </p>
    </div>
