--- a/pricing/index.html
+++ b/pricing/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, interactive-widget=resizes-content" />
-  <title>TeleBot Host - Pricing</title>
+  <title>TeleBotHost - Pricing</title>
 
-  <meta name="description" content="Transparent pricing for TeleBot Host. Choose from Free, Freemium, Premium, and Elite plans to power your Telegram bots with the right resources.">
-  <meta name="keywords" content="TeleBot Host pricing, Telegram bot hosting pricing, cheap Telegram bot hosting, TBL pricing plans">
+  <meta name="description" content="Transparent pricing for TeleBotHost. Choose from Free, Freemium, Premium, and Elite plans to power your Telegram bots with the right resources.">
+  <meta name="keywords" content="TeleBotHost pricing, Telegram bot hosting pricing, TeleBotHost , TeleBotHost pricing plans, pricing, plans, cheap Telegram bot hosting, TBL pricing plans">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -203,8 +203,8 @@
 <header id="header">
   <div class="container nav-container">
     <a href="/" class="logo">
-      <img src="/assets/img/logo.png" alt="TeleBot Host Logo">
-      TeleBot Host
+      <img src="/assets/img/logo.png" alt="TeleBotHost Logo">
+      TeleBotHost 
     </a>
 
     <nav class="nav-links">
