--- a/terms/index.html
+++ b/terms/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, interactive-widget=resizes-content">
-    <title>Terms of Service - TeleBot Host</title>
+    <title>Terms of Service - TeleBotHost</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,8 +22,8 @@
 <header id="header">
     <div class="container nav-container">
         <a href="/" class="logo">
-            <img src="/assets/img/logo.png" alt="TeleBot Host Logo">
-            TeleBot Host
+            <img src="/assets/img/logo.png" alt="TeleBotHost Logo">
+            TeleBotHost
         </a>
         <nav class="nav-links">
             <a href="/" class="nav-link">Home</a>
@@ -43,7 +43,7 @@
 
         <div class="policy-section">
             <h2>1. Introduction</h2>
-            <p>Welcome to TeleBot Host ("we", "our", or "us"). These Terms of Service ("Terms") govern your access to and use of our TBL bot hosting platform, web tools, and related services ("Services"). By creating an account, connecting a bot, or using our Services in any way, you agree to be legally bound by these Terms.</p>
+            <p>Welcome to TeleBotHost ("we", "our", or "us"). These Terms of Service ("Terms") govern your access to and use of our TBL bot hosting platform, web tools, and related services ("Services"). By creating an account, connecting a bot, or using our Services in any way, you agree to be legally bound by these Terms.</p>
             <p>If you do not agree with these Terms, you must not access or use our Services. We may update or modify these Terms from time to time, and any changes will be effective when posted on this page. Your continued use of the Services after changes are posted constitutes acceptance of the updated Terms.</p>
         </div>
 
@@ -114,14 +114,14 @@
             <h2>6. Intellectual Property</h2>
 
             <h3>6.1 Our Rights</h3>
-            <p>All rights, title, and interest in and to the Services, including but not limited to software, code, designs, branding, logos, and documentation, are and will remain the exclusive property of TeleBot Host and its licensors.</p>
+            <p>All rights, title, and interest in and to the Services, including but not limited to software, code, designs, branding, logos, and documentation, are and will remain the exclusive property of TeleBotHost and its licensors.</p>
 
             <h3>6.2 Your Bots and Content</h3>
             <p>You own the bots, scripts, and content you create and upload to the Services. By using the Services, you grant us a worldwide, non-exclusive, royalty-free license to host, run, store, and process your content solely as necessary to provide and improve the Services.</p>
             <p>You are solely responsible for ensuring that your content does not violate these Terms or any applicable law.</p>
 
             <h3>6.3 Trademarks</h3>
-            <p>"TeleBot Host" and associated logos are our trademarks or service marks. You may not use them without our prior written permission.</p>
+            <p>"TeleBotHost" and associated logos are our trademarks or service marks. You may not use them without our prior written permission.</p>
         </div>
 
         <div class="policy-section">
@@ -171,7 +171,7 @@
 
         <div class="policy-section">
             <h2>10. Limitation of Liability</h2>
-            <p>TO THE MAXIMUM EXTENT PERMITTED BY LAW, TELEBOT HOST AND ITS OWNERS, EMPLOYEES, PARTNERS, AND AFFILIATES SHALL NOT BE LIABLE FOR:</p>
+            <p>TO THE MAXIMUM EXTENT PERMITTED BY LAW, TeleBotHost AND ITS OWNERS, EMPLOYEES, PARTNERS, AND AFFILIATES SHALL NOT BE LIABLE FOR:</p>
             <ul>
                 <li>ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES</li>
                 <li>LOSS OF PROFITS, REVENUE, DATA, GOODWILL, OR OTHER INTANGIBLE LOSSES</li>
@@ -183,7 +183,7 @@
 
         <div class="policy-section">
             <h2>11. Indemnification</h2>
-            <p>You agree to defend, indemnify, and hold harmless TeleBot Host, its owners, employees, and partners from and against any claims, liabilities, damages, losses, and expenses (including reasonable attorneys’ fees) arising out of or related to:</p>
+            <p>You agree to defend, indemnify, and hold harmless TeleBotHost, its owners, employees, and partners from and against any claims, liabilities, damages, losses, and expenses (including reasonable attorneys’ fees) arising out of or related to:</p>
             <ul>
                 <li>Your use or misuse of the Services</li>
                 <li>Your violation of these Terms or any applicable law</li>
