--- a/tests/index.html
+++ b/tests/index.html
@@ -1,1 +1,138 @@
-<!-- nothing -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Beginner’s Guide to Digital Marketing in 2026</title>
+
+    <!-- Required Meta -->
+    <meta name="referrer" content="no-referrer-when-downgrade" />
+
+    <!-- SEO Meta -->
+    <meta name="description" content="Learn the fundamentals of digital marketing, including SEO, content marketing, social media, and email strategies. A beginner-friendly guide for 2026.">
+    <meta name="keywords" content="digital marketing, SEO basics, content marketing, online marketing guide">
+    <meta name="author" content="Your Site Name">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Beginner’s Guide to Digital Marketing in 2026">
+    <meta property="og:description" content="A clear and simple introduction to digital marketing strategies that work today.">
+    <meta property="og:type" content="article">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Article Category -->
+    <meta name="category" content="Technology / Digital Marketing">
+
+    <!-- Basic Styling (optional, safe for ads later) -->
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            line-height: 1.7;
+            margin: 0;
+            padding: 0;
+            background: #ffffff;
+            color: #222;
+        }
+        main {
+            max-width: 900px;
+            margin: auto;
+            padding: 20px;
+        }
+        header h1 {
+            font-size: 2.2rem;
+            margin-bottom: 10px;
+        }
+        .meta {
+            color: #666;
+            font-size: 0.9rem;
+            margin-bottom: 20px;
+        }
+        section {
+            margin-bottom: 30px;
+        }
+        h2 {
+            font-size: 1.6rem;
+            margin-bottom: 10px;
+        }
+        footer {
+            border-top: 1px solid #ddd;
+            padding-top: 15px;
+            font-size: 0.9rem;
+            color: #555;
+        }
+    </style>
+</head>
+
+<body>
+
+<main>
+
+    <header>
+        <h1>Beginner’s Guide to Digital Marketing in 2026</h1>
+        <div class="meta">
+            <span>Category: Technology / Digital Marketing</span> |
+            <span>Updated: 2026</span>
+        </div>
+    </header>
+
+    <article>
+
+        <section>
+            <p>
+                Digital marketing has become one of the most important skills for businesses, creators, and entrepreneurs.
+                Whether you run a website, an online store, or a personal brand, understanding digital marketing helps
+                you reach the right audience and grow sustainably.
+            </p>
+        </section>
+
+        <section>
+            <h2>What Is Digital Marketing?</h2>
+            <p>
+                Digital marketing refers to promoting products, services, or content using online channels.
+                These channels include search engines, social media platforms, email, and websites.
+                Unlike traditional advertising, digital marketing allows precise targeting and measurable results.
+            </p>
+        </section>
+
+        <section>
+            <h2>Core Types of Digital Marketing</h2>
+            <p>
+                There are several key areas every beginner should understand:
+            </p>
+            <ul>
+                <li><strong>Search Engine Optimization (SEO):</strong> Improving visibility in search results.</li>
+                <li><strong>Content Marketing:</strong> Creating useful articles, videos, and guides.</li>
+                <li><strong>Social Media Marketing:</strong> Engaging audiences on social platforms.</li>
+                <li><strong>Email Marketing:</strong> Building relationships through email campaigns.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Why Digital Marketing Matters</h2>
+            <p>
+                Most customers now research online before making decisions. A strong digital presence
+                builds trust, increases brand awareness, and drives long-term traffic without relying
+                solely on paid advertising.
+            </p>
+        </section>
+
+        <section>
+            <h2>Getting Started the Right Way</h2>
+            <p>
+                Beginners should focus on learning the basics, creating high-quality content,
+                and understanding their audience. Consistency and patience are more important
+                than chasing quick results.
+            </p>
+        </section>
+
+    </article>
+
+    <footer>
+        <p>
+            © 2026 Your Site Name. All rights reserved.
+        </p>
+    </footer>
+
+</main>
+
+</body>
+</html>
