--- a/tests/index.html
+++ b/tests/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Beginner’s Guide to Digital Marketing in 2026</title>
+    
+    <!-- hilltop ads test -->
 
     <!-- Required Meta -->
     <meta name="referrer" content="no-referrer-when-downgrade" />
