--- a/utils/tgs-to-lottie/index.html
+++ b/utils/tgs-to-lottie/index.html
@@ -29,7 +29,8 @@
     <!-- SweetAlert2 for popups -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-    
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
+
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
