--- a/utils/tgs-to-lottie/index.html
+++ b/utils/tgs-to-lottie/index.html
@@ -60,7 +60,7 @@
     }
     </script>
     
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
 
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: -apple-system, BlinkMacSystemFont, sans-serif; }
@@ -250,12 +250,16 @@ footer strong {
 <p class="subtitle">Convert Telegram animated stickers to Lottie JSON format with live preview</p>
 </header>
 
+<!-- docad -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-fb+5w+4e-db+86"
      data-ad-client="ca-pub-2719295794573158"
-     data-ad-slot="8786409519"></ins>
+     data-ad-slot="4335444793"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -299,13 +303,13 @@ footer strong {
     </div>
 </div>
 </div>
-  <!-- docad -->
+
 <ins class="adsbygoogle"
      style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
      data-ad-client="ca-pub-2719295794573158"
-     data-ad-slot="4335444793"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="8786409519"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -327,7 +331,8 @@ footer strong {
         <li>Edit animations in Lottie-compatible tools</li>
         <li>Use Telegram animations in presentations or videos</li>
     </ul>
-    <ins class="adsbygoogle"
+
+<ins class="adsbygoogle"
      style="display:block; text-align:center;"
      data-ad-layout="in-article"
      data-ad-format="fluid"
@@ -336,7 +341,6 @@ footer strong {
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
     <h3>How It Works</h3>
     <p>The converter decompresses the TGS file using pako.js (a zlib port), extracts the JSON animation data, and provides it in standard Lottie format. The preview uses Lottie player to display the animation directly in your browser.</p>
     
