--- a/utils/tgs-to-lottie/index.html
+++ b/utils/tgs-to-lottie/index.html
@@ -171,6 +171,7 @@ h1 { font-size: 32px; font-weight: 600; margin-bottom: 8px; color: #111; }
     background: #fff;
     border-radius: 10px;
     height: 300px;
+    margin-bottom: 9px;
     display: flex;
     align-items: center;
     justify-content: center;
