--- a/utils/index.html
+++ b/utils/index.html
@@ -184,7 +184,24 @@
                         </div>
                     </a>
                 </div>
-                
+                <div class="tool-item">
+  <a href="json-formatter" class="tool-link">
+    <div class="tool-icon">
+      <i class="fas fa-code"></i>
+    </div>
+
+    <div class="tool-info">
+      <div class="tool-title">JSON Formatter & Validator</div>
+      <div class="tool-description">
+        Format, validate, and beautify JSON with instant error detection
+      </div>
+    </div>
+
+    <div class="tool-arrow">
+      <i class="fas fa-chevron-right"></i>
+    </div>
+  </a>
+</div>
             </div>
         </section>
 
@@ -214,8 +231,8 @@
      <div class="footer-links">
         <h3>Tools</h3>
         <ul>
-                        <li><a href="/utils/tgs-to-lottie">TGS to Lottie</a></li>
-                        <li><a href="/utils/json-formatter">JSON Formatter</a></li>
+                        <li><a href="tgs-to-lottie">TGS to Lottie</a></li>
+                        <li><a href="json-formatter">JSON Formatter</a></li>
 
                     </ul>
                 </div>
