--- a/utils/json-formatter/index.html
+++ b/utils/json-formatter/index.html
@@ -47,7 +47,7 @@
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: -apple-system, BlinkMacSystemFont, sans-serif; }
 body { background: #f5f5f5; color: #222; line-height: 1.6; }
 .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
-.sub-header { text-align: center; padding: 60px 0 30px; }
+.sub-header { text-align: center; padding: 60px 0 30px; margin-top: 20px;}
 h1 { font-size: 32px; font-weight: 600; margin-bottom: 8px; color: #111; }
 .subtitle { color: #666; font-size: 15px; max-width: 500px; margin: 0 auto; line-height: 1.5; }
 .content { margin: 40px 0; }
@@ -228,13 +228,13 @@ textarea {
 <body>
     
 <header id="header">
-      <div class="container nav-container">
+      <div class=" containerh nav-container">
           <a href="/" class="logo">
               <img src="/assets/img/logo.png" alt="TeleBotHost Logo">
               TeleBotHost
           </a>
           <nav class="nav-links">
-              <a href="/" class="nav-link">Home</a>
+              <a href="/utils" class="nav-link">Tools</a>
           </nav>
       </div>
   </header>
