--- a/utils/tgs-to-lottie/index.html
+++ b/utils/tgs-to-lottie/index.html
@@ -230,7 +230,7 @@ lottie-player {
 <body>
     
 <header id="header">
-      <div class="container nav-container">
+      <div class="containerh nav-container">
           <a href="index.html" class="logo">
               <img src="/assets/img/logo.png" alt="TeleBotHost Logo">
               TeleBotHost
@@ -361,9 +361,8 @@ lottie-player {
     <div class="footer-links">
         <h3>Tools</h3>
         <ul>
-                        <li><a href="/utils/tgs-to-lottie">TGS to Lottie</a></li>
-                        <li><a href="/utils/json-formatter">JSON Formatter</a></li>
-
+        <li><a href="/utils/tgs-to-lottie">TGS to Lottie</a></li>
+        <li><a href="/utils/json-formatter">JSON Formatter</a></li>
          </ul>
                 </div>
             </div>
