--- a/utils/json-formatter/index.html
+++ b/utils/json-formatter/index.html
@@ -245,10 +245,15 @@ textarea {
 <p class="subtitle">Beautify, validate, and highlight JSON syntax. Convert JavaScript objects to JSON format.</p>
 </div>
 
-<ins class="adsbygoogle"
-     style="display:inline-block;width:100%;height:50px;"
-     data-ad-client="ca-pub-2719295794573158"
-     data-ad-slot="4335444793"></ins>
+<div style="max-width:300px;margin:auto;">
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-2719295794573158"
+       data-ad-slot="4335444793"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+</div>
+
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
