--- a/utils/index.html
+++ b/utils/index.html
@@ -7,7 +7,7 @@
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-4.0.0.min.js" integrity="sha256-OaVG6prZf4v69dPg6PhVattBXkcOWQB62pdZ3ORyrao=" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="assets/styles.css?1">
  <link rel="stylesheet" href="assets/tools.css">
     <style>
@@ -261,6 +261,6 @@
             });
         });
     </script>
-<script src="assets/tools.js" type="text/javascript" charset="utf-8"></script>
+<script src="assets/min.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
