--- a/utils/tgs-to-lottie/index.html
+++ b/utils/tgs-to-lottie/index.html
@@ -62,7 +62,7 @@
     
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="../assets/styles.css?1">
-
+<script src="https://code.jquery.com/jquery-4.0.0.min.js" integrity="sha256-OaVG6prZf4v69dPg6PhVattBXkcOWQB62pdZ3ORyrao=" crossorigin="anonymous"></script>
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: -apple-system, BlinkMacSystemFont, sans-serif; }
 body { background: #f5f5f5; color: #222; line-height: 1.6; }
@@ -246,14 +246,13 @@ lottie-player {
 <p class="subtitle">Convert Telegram animated stickers to Lottie JSON format with live preview</p>
 </div>
 
-<div style="max-width:300px;margin:auto;">
+
   <ins class="adsbygoogle"
        style="display:block"
        data-ad-client="ca-pub-2719295794573158"
        data-ad-slot="4335444793"
        data-ad-format="auto"
        data-full-width-responsive="true"></ins>
-</div>
 
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
@@ -373,7 +372,7 @@ lottie-player {
             
         </div>
     </footer>
-
+<script src="assets/min.js" type="text/javascript" charset="utf-8"></script>
 <script>
 let jsonData = null;
 const fileInput = document.getElementById('fileInput');
