--- a/utils/tgs-to-lottie/index.html
+++ b/utils/tgs-to-lottie/index.html
@@ -62,7 +62,6 @@
     
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="../assets/styles.css?1">
-<script src="https://code.jquery.com/jquery-4.0.0.min.js" integrity="sha256-OaVG6prZf4v69dPg6PhVattBXkcOWQB62pdZ3ORyrao=" crossorigin="anonymous"></script>
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: -apple-system, BlinkMacSystemFont, sans-serif; }
 body { background: #f5f5f5; color: #222; line-height: 1.6; }
@@ -236,7 +235,7 @@ lottie-player {
               TeleBotHost
           </a>
           <nav class="nav-links">
-              <a href="/" class="nav-link">Tools</a>
+              <a href="/utils" class="nav-link">Tools</a>
           </nav>
       </div>
   </header>
@@ -372,7 +371,7 @@ lottie-player {
             
         </div>
     </footer>
-<script src="assets/min.js" type="text/javascript" charset="utf-8"></script>
+
 <script>
 let jsonData = null;
 const fileInput = document.getElementById('fileInput');
