--- a/index.html
+++ b/index.html
@@ -53,7 +53,16 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
   <meta name="msapplication-TileColor" content="#ffffff">
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"><!-- TrustBox script -->
+<script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-W2G8KLDZ');</script>
+<!-- End Google Tag Manager -->
+<!-- End TrustBox script -->
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <style>
         * {
@@ -194,6 +203,10 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
 </script>
 </head>
 <body class="bg-white text-black">
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2G8KLDZ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <!-- Header -->
     <header class="sticky top-0 z-50 bg-white">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
@@ -496,8 +509,15 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
         </div>
     </div>
 </section>
+<section class="py-8 ">
+   <!-- TrustBox widget - Review Collector -->
+<div class="trustpilot-widget" data-locale="en-US" data-template-id="56278e9abfbbba0bdcd568bc" data-businessunit-id="698dee0bcd2640ab9bfcddd1" data-style-height="80px" data-style-width="100%" data-token="88e93022-9638-453d-ab1c-f42482cd53a2">
+  <a href="https://www.trustpilot.com/review/telebothost.com" target="_blank" rel="noopener">Trustpilot</a>
+</div>
+<!-- End TrustBox widget -->
+</section>
     <!-- FAQ Section -->
-    <section class="py-16 bg-white">
+    <section class="pb-10 bg-white">
         <div class="container mx-auto px-4">
             <div class="max-w-7xl mx-auto">
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
