--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section class="py-8 ">
    <!-- TrustBox widget - Review Collector -->
 <div class="trustpilot-widget" data-locale="en-US" data-template-id="56278e9abfbbba0bdcd568bc" data-businessunit-id="698dee0bcd2640ab9bfcddd1" data-style-height="80px" data-style-width="100%" data-token="88e93022-9638-453d-ab1c-f42482cd53a2">
-  <a href="https://www.trustpilot.com/review/telebothost.com" target="_blank" rel="noopener">Trustpilot</a>
+  <a href="https://www.trustpilot.com/review/telebothost.com" target="_blank" rel="noopener">Rate Us On Trustploit</a>
 </div>
 <!-- End TrustBox widget -->
 </section>
